Google,FB Auth Done

--- a/config/config.env
+++ b/config/config.env
@@ -8,4 +8,4 @@ JWT_RESET_PASSWORD=e65f5feef15f4wef1wf
 EMAIL_TO=none@gmail.com
 EMAIL_FROM=parthy4399@gmail.com
 MAIL_KEY=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
-GOOGLE_CLIENT=
+GOOGLE_CLIENT=626131168648-39rdomn20kfc79bc7a5rbna90m37v172.apps.googleusercontent.com
